<resources>
    <string name="app_name">PasswordRecorder</string>
    <string name="username">Username:</string>
    <string name="enterUsername">Put your username here</string>
    <string name="password">Password:</string>
    <string name="enterPassword">Put your password here</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="birth">birthday</string>
    <string name="birthDay">enter your birthday here</string>
    <string name="addPassword">click to add password</string>
    <string name="checkInfo">click here to check info</string>
    <string name="edit">click here to edit info</string>
    <string name="editHint">Go to edit by long click the info</string>
    <string name="registerInfo">Which website you register the account</string>
    <string name="securityPhone">The security phone number you submit on website</string>
    <string name="enterSecurity">Enter phone number here</string>
    <string name="addBtn">Add it</string>
    <string name="checkBtn">Check if username is exist</string>
    <string name="changeBtn">Change password</string>
    <string name="checkInGuthub">Go to github</string>
    <string name="reportBtn">report a bug</string>
    <string name="backupBtn">Click here to backup</string>
    <string name="restoreBtn">Click here to restore</string>
    <string name="restoreHint">File must exist in root directory</string>
    <string name="searchBtn">Click here to search</string>
    <string name="searchBy">SearchBy:</string>
    <string name="searchHint">Input here</string>
    <string name="passwordHint">Password must between 8–16 length, type in(eg.abcd,1234,#@!)</string>
    <string name="rememberPassword">Remember username,password</string>
    <string name="phoneSW">Phone number</string>
    <string name="otherSW">other info</string>
    <string name="error1">Please enter info</string>
    <string name="error2">Exist username, change it.</string>
    <string name="error3">Wrong info</string>
    <string name="error4">No info there please add</string>
    <string name="error5">Wrong username</string>
    <string name="error6">Wrong securityCode</string>
    <string name="error7">Old password can\'t be same with new password</string>
    <string name="error8">No backup file found.</string>
    <string name="error9">Password must have 8–16 values</string>
    <string name="success1">Register complete! Go to Login</string>
    <string name="success2">Login successfully</string>
    <string name="success3">Change success! Go to Login</string>
    <string name="success4">Backup succeed, it\'s in:</string>
    <string name="info1">Welcome back </string>
    <string name="info2">The info you enter is:</string>
    <string name="info3">Are you sure you want to delete this?</string>
    <string name="info4">Check Successed</string>
    <string name="info5">Are you sure you want to edit this?</string>
    <string name="info6">Are you sure you want to add this?</string>
    <string name="info7">Last time you backup is:</string>
    <string name="info8">No backup found</string>
    <string name="info9">You have: </string>
    <string name="info10">info in db</string>
    <string name="info11">Restore completed,Go to login</string>
    <string name="info12">Short click to view and copy,Long click info to delete it</string>
    <string name="info13">Backup founded! It modified in: </string>
    <string name="info14">You did not save info, return?</string>
    <string name="info15">Find language changed, restart application</string>
    <string name="exit1">Press another back to exit</string>
    <string name="warning1">Yes will lose this info</string>
    <string name="infoUser">Username:</string>
    <string name="infoPwd">Password:</string>
    <string name="infoWeb">Website:</string>
    <string name="infoSecurity">Security phone:</string>
    <string name="infoOther">Other:</string>
    <string name="yesBtn">Yes</string>
    <string name="noBtn">no</string>
    <string name="sureBtn">confirm</string>
    <string name="copyBtn">Copy username and password data to clipboard</string>
    <string name="BackToFront">Click here back to front</string>
    <string name="back">Back to login</string>
    <string name="returnToLogin">Click here to logout</string>
    <string name="findPass">Forget password</string>
    <string name="aboutUs">about</string>
    <string name="popAbout">This program is designed by Kylinlee\u00A9 \n And it\'s 100% openSource and free \n You can check the code by click the button to github\n Or report bug by add an issue on Git</string>
    <string name="secCode">Safety Code:</string>
    <string name="secCodeHint">Enter safety code here</string>
    <string name="secSwitch">Account need Security phone</string>
    <string name="otherInfoSwitch">Account need other info</string>
    <string name="otherInfoHint">Place other info here</string>
    <string name="userInfoHint">Here is user info and data</string>
    <string-array name="website">
        <item>Google</item>
        <item>Facebook</item>
        <item>Outlook</item>
        <item>Itunes</item>
        <item>Amazon</item>
        <item>QQ</item>
        <item>163mail</item>
        <item>wechat</item>
        <item>blizzard</item>
        <item>Steam</item>
        <item>Netease</item>
        <item>other</item>
    </string-array>
    <string-array name="numberCode">
        <item>+1</item>
        <item>+86</item>
        <item>+852</item>
    </string-array>
    <string-array name="searchByWhat">
        <item>username</item>
        <item>website</item>
        <item>security phone</item>
    </string-array>
</resources>