<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FindPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="15sp"
        android:textColor="@android:color/holo_orange_dark"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/findUsername"
        android:hint="@string/enterUsername"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/passHint"
        android:textColor="@android:color/holo_orange_dark"

        android:textSize="15sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordFind"
        android:drawableRight="@drawable/close"
        android:paddingRight="10dp"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordHint"
        android:textColor="@android:color/holo_orange_dark"
        android:id="@+id/passwordHint2"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/checkBtn"
            android:id="@+id/checkBtn"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/changeBtn"
            android:id="@+id/changeBtn"/>
</LinearLayout>