<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/username"
        android:textSize="15dp"
        android:textColor="@android:color/holo_green_dark"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameReg"
        android:hint="@string/enterUsername"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/password"
        android:textSize="15dp"
        android:textColor="@android:color/holo_green_dark"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordReg"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:drawableRight="@drawable/close"
        android:paddingRight="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_registeractivity_phoneCodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secCode"
            android:textColor="@android:color/holo_green_dark"/>
        <EditText
            android:id="@+id/et_registeractivity_phoneCodes"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/secCodeHint" />

        <ImageView
            android:id="@+id/iv_registeractivity_showCode"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1.5"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_marginTop="-10dp"
            tools:ignore="OnClick" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/backBtn"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/registerBtn"
            android:layout_weight="1"

            />
    </LinearLayout>

</LinearLayout>