<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartPage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/showUser"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addPassword"
        android:text="@string/addPassword"
        android:textColor="@android:color/holo_green_dark"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkInfo"
        android:text="@string/checkInfo"
        android:textColor="@android:color/holo_red_dark"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/backToMain"
        android:text="@string/returnToLogin"/>
</LinearLayout>